--- a/ProjetoFinal/Base.lproj/Main.storyboard
+++ b/ProjetoFinal/Base.lproj/Main.storyboard
@@ -172,7 +172,7 @@
             </objects>
             <point key="canvasLocation" x="1432" y="1032"/>
         </scene>
-        <!--Lista Desafio View Controller - Desafios-->
+        <!--Lista Desafio View Controller-->
         <scene sceneID="86r-1f-ydU">
             <objects>
                 <viewController storyboardIdentifier="listaDesafio" id="Laj-yx-eaG" customClass="ListaDesafioViewController" sceneMemberID="viewController">
@@ -244,7 +244,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Desafios" id="iHi-iQ-lw0">
+                    <navigationItem key="navigationItem" id="iHi-iQ-lw0">
                         <barButtonItem key="backBarButtonItem" title="   " id="CuO-PB-wST"/>
                     </navigationItem>
                 </viewController>
