--- a/ProjetoFinal/Base.lproj/Main.storyboard
+++ b/ProjetoFinal/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="tHn-97-uZ9">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13F34" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="tHn-97-uZ9">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
@@ -119,6 +119,7 @@
         <!--View Controller - Enciclopédia-->
         <scene sceneID="237-fs-HyQ">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YVg-HU-I1R" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="l7v-hr-0yC" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="o7N-fn-plz"/>
@@ -131,7 +132,6 @@
                     </view>
                     <navigationItem key="navigationItem" title="Enciclopédia" id="zZV-gv-64b"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="YVg-HU-I1R" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="464" y="-186"/>
         </scene>
