--- a/ProjetoFinal/Base.lproj/Main.storyboard
+++ b/ProjetoFinal/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="14A389" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="tHn-97-uZ9">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="wAl-ml-W3N">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
     <scenes>
         <!--Tutorial View Controller-->
@@ -40,6 +41,33 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mjs-sf-Md5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-3232" y="-186"/>
+        </scene>
+        <!--Testando Linha View Controller-->
+        <scene sceneID="IF1-bB-9O0">
+            <objects>
+                <viewController id="wAl-ml-W3N" customClass="TestandoLinhaViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="mmc-Pg-T6M"/>
+                        <viewControllerLayoutGuide type="bottom" id="hxa-XE-HGY"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="LHr-hF-dsz">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WPi-iq-nhe" customClass="BEMSimpleLineGraphView">
+                                <rect key="frame" x="94" y="190" width="557" height="440"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <outlet property="myGraph" destination="WPi-iq-nhe" id="CgB-oE-NH0"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lKF-tp-TeO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2757" y="-1647"/>
         </scene>
         <!--Filho View Controller-->
         <scene sceneID="tP2-fB-Y4l">
@@ -84,7 +112,6 @@
             <objects>
                 <navigationController storyboardIdentifier="navigationController" definesPresentationContext="YES" id="tHn-97-uZ9" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Rr3-4G-eh8">
-                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -95,7 +122,7 @@
             </objects>
             <point key="canvasLocation" x="-1550" y="-186"/>
         </scene>
-        <!--Menu View Controller - Assuntos-->
+        <!--Assuntos-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController storyboardIdentifier="menu" id="BYZ-38-t0r" customClass="MenuViewController" sceneMemberID="viewController">
@@ -117,7 +144,7 @@
             </objects>
             <point key="canvasLocation" x="464" y="-1485"/>
         </scene>
-        <!--View Controller - Enciclopédia-->
+        <!--Enciclopédia-->
         <scene sceneID="237-fs-HyQ">
             <objects>
                 <viewController id="l7v-hr-0yC" sceneMemberID="viewController">
@@ -168,7 +195,6 @@
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lSQ-tJ-bpg">
                                 <rect key="frame" x="41" y="19" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -203,7 +229,7 @@
             </objects>
             <point key="canvasLocation" x="2338" y="1032"/>
         </scene>
-        <!--Lista Desafio View Controller - Desafios-->
+        <!--Desafios-->
         <scene sceneID="86r-1f-ydU">
             <objects>
                 <viewController storyboardIdentifier="listaDesafio" id="Laj-yx-eaG" customClass="ListaDesafioViewController" sceneMemberID="viewController">
@@ -228,23 +254,19 @@
                                             <subviews>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Titulo" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vch-oV-TkW">
                                                     <rect key="frame" x="166" y="32" width="404" height="54"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="40"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Descricao" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="404" translatesAutoresizingMaskIntoConstraints="NO" id="Oq8-uN-v45">
                                                     <rect key="frame" x="166" y="94" width="404" height="77"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Q9y-xM-ssr">
                                                     <rect key="frame" x="11" y="20" width="120" height="128"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                                 <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tY4-e7-UOG">
                                                     <rect key="frame" x="586" y="-1" width="182" height="183"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <state key="normal" image="botao-go.png">
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
@@ -255,7 +277,6 @@
                                                 </button>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="divisoria.png" translatesAutoresizingMaskIntoConstraints="NO" id="JZk-iu-Z6Q">
                                                     <rect key="frame" x="0.0" y="180" width="768" height="20"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                             </subviews>
                                             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -283,7 +304,7 @@
             </objects>
             <point key="canvasLocation" x="464" y="1032"/>
         </scene>
-        <!--Livre View Controller - Livre-->
+        <!--Livre-->
         <scene sceneID="pvF-xX-eqf">
             <objects>
                 <viewController id="fMn-6K-qgM" customClass="LivreViewController" sceneMemberID="viewController">
@@ -321,7 +342,6 @@
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="fundo-menu.png" translatesAutoresizingMaskIntoConstraints="NO" id="WDO-Yx-5jz">
                                 <rect key="frame" x="-11" y="0.0" width="787" height="1024"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zh1-Nb-TYU">
                                 <rect key="frame" x="504" y="481" width="134" height="172"/>
@@ -352,26 +372,21 @@
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="tedra-logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="SQT-cy-6EN">
                                 <rect key="frame" x="146" y="252" width="477" height="93"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="direitos.png" translatesAutoresizingMaskIntoConstraints="NO" id="yzs-a7-8So">
                                 <rect key="frame" x="176" y="878" width="417" height="23"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lkL-vY-5RQ">
                                 <rect key="frame" x="360" y="739" width="48" height="48"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="botao-preferencias.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="preferencias.png" translatesAutoresizingMaskIntoConstraints="NO" id="jWA-DP-Ura">
                                 <rect key="frame" x="334" y="795" width="96" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="main_menu-animation.png" translatesAutoresizingMaskIntoConstraints="NO" id="tR8-09-FTt">
                                 <rect key="frame" x="0.0" y="0.0" width="768" height="2050"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -575,7 +590,7 @@
             </objects>
             <point key="canvasLocation" x="2550" y="-2005"/>
         </scene>
-        <!--ExercicioV Iew Contoller - controlador q tem a lista de exercicios-->
+        <!--controlador q tem a lista de exercicios-->
         <scene sceneID="dzV-zg-u19">
             <objects>
                 <viewController automaticallyAdjustsScrollViewInsets="NO" id="tQW-Gq-m4D" customClass="ExercicioVIewContoller" sceneMemberID="viewController">
